# credit-risk-scoring

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  gitignore  mlflow.db  pyproject.toml  requirements-app.txt  requirements.txt
configs/: model.yaml  paths.yaml
data/raw/: .gitignore  LoanDataset.csv.dvc
mlruns/957583030780551215/: meta.yaml
mlruns/957583030780551215/26ea30ea2df84a8291c0d641f3b12c92/: meta.yaml
mlruns/957583030780551215/2fd4811edc4a4a748ab2c2da3aa46b8c/: meta.yaml
mlruns/957583030780551215/589a641bd9f94ca0b27fb6ea5d65fbcd/: meta.yaml
mlruns/957583030780551215/a78b6c6191614108b144fdb674a49cc2/: meta.yaml
mlruns/957583030780551215/beef6ff4b5bf49788d8c82c10c322b65/: meta.yaml
mlruns/957583030780551215/e8f038964c674925bf13bc2c0ddc8bfe/: meta.yaml
mlruns/957583030780551215/f28c9a20494345129f0a72bb5539550d/: meta.yaml
models/: .gitignore  sklearn_model.pkl.dvc  torch_model.pt.dvc
notebooks/: 01_eda_and_sklearn_baseline.ipynb  02_pytorch_mlp.ipynb  03_model_comparison.ipynb  pruebas_jj.ipynb
notebooks/models/: sklearn_model.pkl  torch_model.pt
src/credit_risk/app/: inference.py  streamlit_app.py
src/credit_risk/data/: loader.py  preprocessing.py  schema.py
src/credit_risk/evaluation/: compare.py  metrics.py  results.py
src/credit_risk/features/: engineering.py
src/credit_risk/models/: base.py  sklearn_model.py  torch_dataset.py  torch_model.py
src/credit_risk/utils/: logger.py  (+1 more)
tests/: conftest.py  test_features.py  test_loader.py  test_preprocessing.py  test_sklearn_model.py  test_torch_model.py
(+44 files in other folders)
